--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Landing Page</title>
 </head>
 <body>
-<div class="container0">
-  <h2 class="logo">Header Logo</h1>
+  <div class="header">
+    <h3 class="logo">Header Logo</h3>
     <ul class="link-list">
       <li><a href="#">header link one</a></li>
       <li><a href="#">header link two</a></li>
       <li><a href="#">header link three</a></li>
     </ul>
-</div>
+  </div>
+  <div class="container1">
+    <h1>This website is awesome</h1>
+    <p class="description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+    <a href="#">Sign up</a>
+    <img src="" alt="this is a placeholder for a image">
+  </div>
+  <h4 class="footer">Copyright © The Odin Project 2021</h4>
 </body>
 </html>
