Completed first section

--- a/index.html
+++ b/index.html
@@ -7,18 +7,42 @@
 </head>
 <body>
   <div class="header">
-    <h3 class="logo">Header Logo</h3>
+    <div class="logo">Header Logo</div>
     <ul class="link-list">
       <li><a href="#">header link one</a></li>
       <li><a href="#">header link two</a></li>
       <li><a href="#">header link three</a></li>
     </ul>
   </div>
-  <div class="container1">
-    <h1>This website is awesome</h1>
-    <p class="description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-    <a href="#">Sign up</a>
-    <img src="" alt="this is a placeholder for a image">
+  <div class="container">
+    <div class="container1">
+      <div class="container2">
+        <h1>This website is awesome</h1>
+        <p class="description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button type="button" class="sign-up-button">Sign up</button>
+      </div>
+      <div class="image">
+       <img src="Images/Arts1.jpg" alt="this is a placeholder for a image">
+      </div>
+    </div>
+    <div class="title2">Some random information</div>
+    <div class="container3">
+      <div class="arts-container">
+        <img src="Images/Arts2.jpg" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="arts-container">
+        <img src="Images/Arts3.jpg" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+      <div class="arts-container">
+        <img src="Images/Arts4.jpg" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="arts-container">
+        <img src="Images/Arts5.jpg" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+      </div>
+    </div>
   </div>
   <h4 class="footer">Copyright © The Odin Project 2021</h4>
 </body>
