--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   </div>
   <div class="container">
     <div class="container1">
-      <div class="container2">
+      <div class="description">
         <h1>This website is awesome</h1>
-        <p class="description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <button type="button" class="sign-up-button">Sign up</button>
       </div>
       <div class="image">
        <img src="Images/Arts1.jpg" alt="this is a placeholder for a image">
       </div>
     </div>
-    <div class="title2">Some random information</div>
-    <div class="container3">
+    <div class="title">Some random information</div>
+    <div class="container2">
       <div class="arts-container">
         <img src="Images/Arts2.jpg" alt="">
         <div class="text">this is some subtext under an illustration or image</div>
@@ -34,6 +34,7 @@
       <div class="arts-container">
         <img src="Images/Arts3.jpg" alt="">
         <div class="text">this is some subtext under an illustration or image</div>
+      </div>
       <div class="arts-container">
         <img src="Images/Arts4.jpg" alt="">
         <div class="text">this is some subtext under an illustration or image</div>
@@ -43,7 +44,17 @@
         <div class="text">this is some subtext under an illustration or image</div>
       </div>
     </div>
+    <div class="container3">
+      <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+      <div>-Thor, God of Thunder</div>
+    </div>
+    <div class = "container4">
+      <div class="blue-box">
+        <div>Call to action! It's time!</div>
+        <div>Sign up for our product by clicking that button right over there!</div>
+      </div>
+    </div>
   </div>
-  <h4 class="footer">Copyright © The Odin Project 2021</h4>
+  <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
