--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="header">
-    <div class="logo">Header Logo</div>
+    <div class="header-logo">Header Logo</div>
     <ul class="link-list">
       <li><a href="#">header link one</a></li>
       <li><a href="#">header link two</a></li>
@@ -17,40 +17,38 @@
   <div class="container">
     <div class="container1">
       <div class="description">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button type="button" class="sign-up-button">Sign up</button>
+        <div class= "title">This website is awesome</div>
+        <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <button type="button" class="sign-up-button bold">Sign up</button>
       </div>
-      <div class="image">
-       <img src="Images/Arts1.jpg" alt="this is a placeholder for a image">
-      </div>
+       <img class="first-image" src="Images/Arts2.jpg" alt="this is a placeholder for a image">
     </div>
-    <div class="title">Some random information</div>
+    <div class="information-header">Some random information</div>
     <div class="container2">
-      <div class="arts-container">
-        <img src="Images/Arts2.jpg" alt="">
+      <div class="arts-museum">
+        <img src="Images/Arts1.jpg" alt="">
         <div class="text">this is some subtext under an illustration or image</div>
       </div>
-      <div class="arts-container">
+      <div class="arts-museum">
         <img src="Images/Arts3.jpg" alt="">
         <div class="text">this is some subtext under an illustration or image</div>
       </div>
-      <div class="arts-container">
+      <div class="arts-museum">
         <img src="Images/Arts4.jpg" alt="">
         <div class="text">this is some subtext under an illustration or image</div>
       </div>
-      <div class="arts-container">
+      <div class="arts-museum">
         <img src="Images/Arts5.jpg" alt="">
         <div class="text">this is some subtext under an illustration or image</div>
       </div>
     </div>
     <div class="container3">
-      <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-      <div>-Thor, God of Thunder</div>
+      <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+      <div class="quote2 bold">-Thor, God of Thunder</div>
     </div>
     <div class = "container4">
       <div class="blue-box">
-        <div>Call to action! It's time!</div>
+        <div class="call-to-action bold">Call to action! It's time!</div>
         <div>Sign up for our product by clicking that button right over there!</div>
       </div>
     </div>
