Refactored html and completed site layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="header">
-    <div class="header-logo">Header Logo</div>
+    <h1 class="header-logo">Header Logo</h1>
     <ul class="link-list">
       <li><a href="#">header link one</a></li>
       <li><a href="#">header link two</a></li>
@@ -17,39 +17,45 @@
   <div class="container">
     <div class="container1">
       <div class="description">
-        <div class= "title">This website is awesome</div>
-        <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <h2 class= "title">This website is</h2>
+        <h1 class="title">awesome</h1>
+        <p class="header-text">This website has some subtext that goes here under the</p>
+        <p class="header-text">main title. It's a smaller font and the color is lower</p>
+        <p class="header-text">contrast</p>
         <button type="button" class="sign-up-button bold">Sign up</button>
       </div>
-       <img class="first-image" src="Images/Arts2.jpg" alt="this is a placeholder for a image">
+      <div class="image">
+        <img class="first-image" src="Images/Arts2.jpg" alt="this is a placeholder for a image">
+      </div>
     </div>
-    <div class="information-header">Some random information</div>
+    <h2 class="information-header">Some random information.</h2>
     <div class="container2">
       <div class="arts-museum">
         <img src="Images/Arts1.jpg" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
+        <p class="text">this is some subtext under an illustration or image</p>
       </div>
       <div class="arts-museum">
         <img src="Images/Arts3.jpg" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
+        <p class="text">this is some subtext under an illustration or image</p>
       </div>
       <div class="arts-museum">
         <img src="Images/Arts4.jpg" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
+        <p class="text">this is some subtext under an illustration or image</p>
       </div>
       <div class="arts-museum">
         <img src="Images/Arts5.jpg" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
+        <p class="text">this is some subtext under an illustration or image</p>
       </div>
     </div>
     <div class="container3">
-      <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-      <div class="quote2 bold">-Thor, God of Thunder</div>
+      <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+      <p class="quote2 bold">-Thor, God of Thunder</p>
     </div>
     <div class = "container4">
       <div class="blue-box">
-        <div class="call-to-action bold">Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
+        <p class="call-to-action bold">Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button type="button" class="sign-up-button bold call-to-action-button">Sign up</button>
       </div>
     </div>
   </div>
